# openaccountants

./: .gitignore  ARCHITECTURE-OPTIONS.md  CHANGELOG.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  INTELLIGENCE-ROADMAP.md  LICENSE  PROMOTION-PLAYBOOK.md  README.md  USER-STORIES.md  skill-template.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  new-country.md  rate-correction.md  vendor-pattern.md
cookbook-contribution/: README.md  notebook_cells.json
docs/: GLOBAL-EXPANSION-PLAN.md  QUALITY-TIERS.md  SKILL-TAXONOMY.md  TEST-PLAN.md  TIER-REDESIGN.md  USER-JOURNEY-ANALYSIS.md  USER-STORIES.md  growth-drafts.md  skill-template.md
mcp/: README.md  pyproject.toml  server.json  smoke_test.py
mcp/openaccountants_mcp/: server.py
scripts/: build-packages.py
skills/: manifest.json
skills/california/: ca-540-individual-return.md  ca-estimated-tax-540es.md  ca-form-3853-coverage.md  ca-smllc-form-568.md  california-sales-tax.md
skills/cross-border/: eu-reverse-charge.md
skills/federal/: no-sales-tax-states.md  us-1099-nec-issuance.md  us-qbi-deduction.md  us-quarterly-estimated-tax.md  us-s-corp-election-decision.md  us-sales-tax.md  us-schedule-c-and-se-computation.md  us-self-employed-health-insurance.md  us-self-employed-retirement.md  us-sole-prop-bookkeeping.md
skills/florida/: fl-annual-report.md  fl-sales-use-tax.md  florida-sales-tax.md
skills/foundation/: gst-workflow-base.md  income-tax-workflow-base.md  social-contributions-workflow-base.md  us-tax-workflow-base.md  vat-workflow-base.md  (+1 more)
(+347 files in other folders)
